fixed achievement-block alignment issues

--- a/src/styles/fvtt-player-achievements.scss
+++ b/src/styles/fvtt-player-achievements.scss
@@ -91,7 +91,8 @@
   flex-wrap: nowrap;
 
   background: darkgrey;
-  margin: 5px;
+  margin-top: 5px;
+  margin-bottom:5px;
   border: 1px solid black;
   border-radius: 5px;
 
@@ -325,6 +326,13 @@
     display:flex;
     flex-flow:row-reverse;
     flex-wrap:nowrap;
+  }
+
+  .achievements-sheet__hide-details {
+    margin-left: 0px;
+    margin-right: 5px;
+    margin-top: 3px;
+    margin-bottom: 3px;
   }
 
   .achievement-block__image-holder-button {
